syntax = "proto3";

package host;

message InvokeResult {
  oneof result {
    Finished finished = 1;
    HostCall host_call = 2;
    Error error = 3;
  }
}

message Finished { MemorySlice ptr = 1; }

message HostCall {
  string name = 1;
  Continuation cont = 2;
  MemorySlice parameters = 3;
}

message Continuation { string name = 1; }

message Error {
  string message = 1;
  optional MemorySlice details = 2;
}

message MemorySlice {
  uint64 start = 1;
  uint64 len = 2;
}